@@ -1,3 +1,13 @@
+# FlipCard
+
+This system is created for all ages learners, to help them learning new languages and studying lessons. The application starts with sign up page, if the user already has an account, user can change the page to login. The system provides list view of flashcards and user also view only a flashcard. After creating collection of flashcards user can view flashcards like single cards and go back and forth in the card collection, can flip the card too. The user can test how much he has learned by pressing the buttons for I know, and I do not know in the card playing menu. At the end of this test, the user's correct and incorrect answers are shown graphically. The user can edit or delete existing collections in library page. Users can share list of their flashcards and other users can like shared flashcards, liked collections can be seen in the liked page. The system provides search bar too, that helps the users can interact with right flashcard collection.
+
+## To Run JAVAFX
+- Java Projects > Referenced Libraries > enter your javafx path
+
+- In .vscode/launch.json > "configurations": > add following code
+```"vmArgs": "--module-path <javafx-path>/lib --add-modules javafx.controls,javafx.fxml",```
+
 ## Getting Started
 
 Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
